[package]
name = "uring-fs"
version = "0.1.0"
edition = "2021"
description = "Truly asynchronous file operations using io-uring. Supports any async runtime. Linux only."
license = "MIT"

[dependencies]
io-uring = "0.6.*"
libc = { version = "0.2.98", default-features = false }

[dev-dependencies]
extreme = "*"
