[package]
name = "uring-fs"
version = "1.2.0"
edition = "2021"
authors = ["foxcirc"]
description = "Truly asynchronous file operations using io-uring. Supports any async runtime. Linux only."
keywords = ["async", "fs", "async-fs", "io_uring", "io"]
categories = ["asynchronous", "filesystem"]
repository = "https://github.com/Foxcirc/uring-fs"
license = "MIT"

[dependencies]
io-uring = "0.6.*"
libc = { version = "0.2.98", default-features = false }

[dev-dependencies]
extreme = "6.*"
